--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
     "fastclick": "^1.0.6",
-    "jsonp": "0.2.1"
+    "jsonp": "0.2.1",
+    "better-scroll": "^0.1.15"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
