--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue-router": "^2.3.1",
     "fastclick": "^1.0.6",
     "jsonp": "0.2.1",
-    "better-scroll": "^0.1.15"
+    "better-scroll": "^0.1.15",
+    "axios": "^0.16.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
