--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "fastclick": "^1.0.6",
     "jsonp": "0.2.1",
     "better-scroll": "^0.1.15",
-    "axios": "^0.16.1"
+    "axios": "^0.16.1",
+    "vue-lazyload": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
