--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "babel-runtime": "^6.0.0",
-    "vue": "^2.3.3",
-    "vue-router": "^2.3.1",
+    "better-scroll": "^0.1.15",
     "fastclick": "^1.0.6",
     "jsonp": "0.2.1",
-    "better-scroll": "^0.1.15",
-    "axios": "^0.16.1",
-    "vue-lazyload": "^1.0.3"
+    "vue": "^2.3.3",
+    "vue-lazyload": "^1.0.3",
+    "vue-router": "^2.3.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
